# backplane-tui

./: Cargo.toml  Makefile  README.md
src/: action.rs  app.rs  config.rs  effects.rs  main.rs  tui.rs
src/claude/: analyzer.rs  mod.rs  models.rs  reader.rs
src/components/: claude_dashboard.rs  confirm_modal.rs  container_detail.rs  container_list.rs  copy_files_modal.rs  create_modal.rs  exec_modal.rs  filter_bar.rs  header.rs  help_modal.rs  info_modal.rs  logs_view.rs  mod.rs  processes_modal.rs  rename_modal.rs  sparkline.rs  status_bar.rs
src/docker/: client.rs  gpu.rs  logs.rs  mod.rs  stats.rs
src/models/: container.rs  mod.rs  stats.rs
src/ui/: layout.rs  mod.rs  styles.rs
